--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,17 @@
 service: serverless-synaptic
 
+custom:
+  dataBucketName: serverless-synaptic-data
+  modelBucketName: serverless-synaptic-model
+
 provider:
   name: aws
   runtime: nodejs6.10
   stage: dev
   region: eu-central-1
+  environment:
+    DATA_BUCKET: ${self:custom.dataBucketName}
+    MODEL_BUCKET: ${self:custom.modelBucketName}
 
 functions:
   learn:
@@ -20,3 +27,21 @@ functions:
       - http:
           path: predict
           method: GET
+resources:
+  Resources:
+    UploadBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:custom.modelBucketName}
+        AccessControl: Private
+        CorsConfiguration:
+          CorsRules:
+          - AllowedMethods:
+            - GET
+            - PUT
+            - POST
+            - HEAD
+            AllowedOrigins:
+            - "*"
+            AllowedHeaders:
+            - "*"
