--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "aws-sdk": "^2.207.0",
     "synaptic": "^1.1.4"
+  },
+  "devDependencies": {
+    "serverless-offline": "^3.18.0"
   }
 }
