--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Chimney42/serverless-synaptic#readme",
   "dependencies": {
     "aws-sdk": "^2.207.0",
+    "node-fetch": "^2.1.1",
     "synaptic": "^1.1.4"
   },
   "devDependencies": {
